--- a/op-lastcall/default.ini
+++ b/op-lastcall/default.ini
@@ -15,8 +15,9 @@ ansifile = op-lastcall.ans
 
 [general]
 listsize = 10
-historysize = 2
+historysize = 3
 format = "%d-%m-%Y"
+location_max_length = 20
 
 [mci]
 position = "|[X03|[Y06"
